--- a/hw5/compile.cfg
+++ b/hw5/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=
+Entity=cpu_TB
 Architecture=
-TopLevelType=
+TopLevelType=3
 [file:.\src\ALU.v]
 Enabled=1
 [file:.\src\alu_register_files.v]
